# TournaX

./: .gitignore  .replit  package.json  pnpm-lock.yaml  replit.md
artifacts/api-server/: Cargo.toml  package.json  set-cors.mjs
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/rust-src/: admin.rs  auth.rs  email.rs  main.rs  matches.rs  wallet.rs
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/config/: store-items.ts
artifacts/api-server/src/lib/: email.ts  notify.ts  objectStorage.ts  settings.ts  socket.ts
artifacts/api-server/src/routes/: admin.ts  ai-referee.ts  auctions.ts  auth.ts  games.ts  groups.ts  index.ts  leaderboard.ts  matches.ts  posts.ts  push.ts  referral.ts  storage.ts  store.ts  users.ts  wallet.ts
artifacts/tournax/: capacitor.config.ts  index.html  package.json  vite.config.cap.ts  vite.config.ts
artifacts/tournax/.replit-artifact/: artifact.toml
artifacts/tournax/android/app/: build.gradle
artifacts/tournax/public/: manifest.json  sw.js
artifacts/tournax/src/: App.tsx  index.css
artifacts/tournax/src/components/: DailyBonusDialog.tsx  OnboardingTour.tsx  PlayerCard.tsx  PwaInstallBanner.tsx
attached_assets/: Pasted-4-A-Profile-Ko-Instagram-Like-Banado-Exact-Waise-he-Jo-_1775642272086.txt  Pasted-Build-a-Team-Auction-System-module-for-a-tournament-bas_1774446844666.txt  Pasted-Build-a-Team-Auction-System-new-Section-he-bana-Dena-Co_1774447126236.txt
lib/api-spec/: openapi.yaml
lib/db/: drizzle.config.ts  package.json
lib/db/src/: index.ts  seed.ts
(+75 files in other folders)
