[package]
name = "tournax-api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tournax-api-server"
path = "rust-src/main.rs"

[dependencies]
axum = "0.7"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }