[package]
name = "tournax-api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tournax-api-server"
path = "rust-src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros"] }
bcrypt = "0.15"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "hostname"] }
chrono = "0.4"
rand = "0.8"
dashmap = "6"
